--- a/Scolaa System/views/register.ejs
+++ b/Scolaa System/views/register.ejs
@@ -11,7 +11,7 @@
         </div>
         <div class="form-group">
             <label for="lastName">Last name</label>
-            <input type="text" name="lastName" id="lastNames" class="form-control" value="<%= locals.lastName || '' %>" required />
+            <input type="text" name="lastName" id="lastNamess" class="form-control" value="<%= locals.lastName || '' %>" required />
         </div>
         <div class="form-group">
             <label for="username">Username</label>
