--- a/Scolaa System/views/register.ejs
+++ b/Scolaa System/views/register.ejs
@@ -7,7 +7,7 @@
     <form method="post">
         <div class="form-group">
             <label for="firstName">First name</label>
-            <input type="text" name="firstName" id="firstName" class="form-control" value="<%= locals.firstName || '' %>" required />
+            <input type="text" name="firstName" id="firstNames" class="form-control" value="<%= locals.firstName || '' %>" required />
         </div>
         <div class="form-group">
             <label for="lastName">Last name</label>
