--- a/Scolaa System/views/login.ejs
+++ b/Scolaa System/views/login.ejs
@@ -1,20 +1,4 @@
-﻿ <style type="text/css">
-        body {
-            padding-top: 100px;
-        }
-
-        .form-container {
-            width: 400px;
-            margin: auto;
-        }
-
-        .credits {
-            border-top: 1px solid #ddd;
-            margin-top: 40px;
-            padding-top: 20px;
-        }
-    </style>
- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+﻿<%- include('partials/header') %>
 <div class="form-container">
     <h2>Login</h2>
     <% if(locals.error) { %>
@@ -38,3 +22,4 @@
         </div>
     </form>
 </div>
+<%- include('partials/footer') %>
