--- a/Scolaa System/views/register.ejs
+++ b/Scolaa System/views/register.ejs
@@ -12,7 +12,14 @@
         <div class="form-group">
             <label for="lastName">Last name</label>
             <input type="text" name="lastName" id="lastNamess" class="form-control" value="<%= locals.lastName || '' %>" required />
-        </div>
+        </div> 
+		 <div class="form-group">
+
+		            <label for="MobileNo">Mobile Number</label>
+
+					            <input type="text" name="mno" id="mno" class="form-control" required />
+
+								        </div>
         <div class="form-group">
             <label for="username">Username</label>
             <input type="text" name="username" id="username" class="form-control" value="<%= locals.username || '' %>" required />
@@ -21,6 +28,7 @@
             <label for="password">Password</label>
             <input type="password" name="password" id="password" class="form-control" required />
         </div>
+		
         <div class="form-group">
             <button type="submit" class="btn btn-primary">Register</button>
             <a href="/login" class="btn btn-link">Cancel</a>
