--- a/Scolaa System/views/login.ejs
+++ b/Scolaa System/views/login.ejs
@@ -19,6 +19,7 @@
         <div class="form-group">
             <button type="submit" class="btn btn-primary">Login</button>
             <a href="/register" class="btn btn-link">Register</a>
+			<a href="/ForgotPassword" class="btn btn-link">ForgotPassword</a>
         </div>
     </form>
 </div>
