--- a/Scolaa System/views/register.ejs
+++ b/Scolaa System/views/register.ejs
@@ -20,6 +20,13 @@
 					            <input type="text" name="mno" id="mno" class="form-control" required />
 
 								        </div>
+										 <div class="form-group">
+
+		            <label for="EmailId">Email ID</label>
+
+					            <input type="text" name="EID" id="EID" class="form-control" value="<%= locals.EID || '' %>" required />
+
+								        </div>
         <div class="form-group">
             <label for="username">Username</label>
             <input type="text" name="username" id="username" class="form-control" value="<%= locals.username || '' %>" required />
@@ -31,7 +38,7 @@
 		
         <div class="form-group">
             <button type="submit" class="btn btn-primary">Register</button>
-            <a href="/login" class="btn btn-link">Cancel</a>
+        <button type="submit" onclick="location.href = '/login';" class="btn btn-primary">Cancel</button>
         </div>
     </form>
 </div>
